# personal-finance

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  test.py
app/: __init__.py  main.py  plaid_manager.py  plotters.py  sample_plaid_keys.py  smartsheet_manager.py
app/api_keys/: __init__.py  sample_api_keys.py
finance/: budget.py  main.py  plaid_manager.py  plotters.py  rules.py  smartsheet_manager.py
finance/api_keys/: __init__.py  sample_keystore.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  store.js
frontend/src/assets/: .gitignore  balances.html
frontend/src/lib/: AddRule.svelte  Rule.svelte
