[metadata]
name = finance
version = 0.0.0
requires_python = ~= 3.9

[options]
packages = find:
install_requires = 
    plaid-python ~= 9.1
    flask ~= 2.1
    black ~= 22.6
    smartsheet-python-sdk ~= 2.105
    bokeh ~= 2.4
    pandas ~= 1.4
    matplotlib ~= 3.5
    uvicorn[standard] ~= 0.18
    fastapi ~= 0.79
